# gramine-tdx

./: README.rst  meson.build  meson_options.txt
common/include/arch/x86_64/: cpu.h
libos/: meson.build
libos/src/: meson.build
libos/src/fs/dev/: attestation.c
libos/src/ipc/: libos_ipc_worker.c
libos/src/vdso/arch/x86_64/: meson.build  vdso_syscall.h
pal/include/: pal_rtld.h
pal/regression/: meson.build
pal/src/: pal_rtld.c
pal/src/host/: meson.build
pal/src/host/linux/: pal_main.c
pal/src/host/linux-sgx/: pal_main.c
pal/src/host/tdx/: README.md  meson.build  pal.lds  pal_bootloader.S  pal_devices.c  pal_events.c  pal_exception.c  pal_host.h  pal_main.c  pal_memory.c  pal_misc.c  pal_object.c  pal_pipes.c  pal_rtld.c  pal_sockets.c  pal_streams.c  pal_threading.c  tdx_arch.c  tdx_arch.h  tdx_quote.h  tdx_tdcall.S  vm_callbacks.c
pal/src/host/vm/: README.md  meson.build  pal.lds  pal_bootloader.S  pal_console.c  pal_devices.c  pal_eventfd.c  pal_files.c  pal_host.h  pal_main.c  pal_memory.c  pal_misc.c  pal_process.c  pal_sockets.c  pal_streams.c  pal_threading.c  vm_bootloader.S  vm_callbacks.c
pal/src/host/vm-common/: README.md  generated_offsets.c  kernel_acpi_madt.c  kernel_acpi_madt.h  kernel_apic.c  kernel_apic.h  kernel_debug.c  kernel_debug.h  kernel_events.S  kernel_files.c  kernel_files.h  kernel_hob.h  kernel_interrupts.c  kernel_interrupts.h  kernel_memory.c  kernel_memory.h  kernel_multicore.S  kernel_multicore.c  kernel_multicore.h  kernel_multicore64.S  kernel_pci.c  kernel_pci.h  kernel_sched.c  kernel_sched.h  kernel_static_structs.S  kernel_syscalls.c  kernel_syscalls.h  kernel_thread.c  kernel_thread.h  kernel_time.c  kernel_time.h  kernel_virtio.c  kernel_virtio.h  kernel_virtio_console.c  kernel_virtio_fs.c  kernel_virtio_vsock.c  kernel_virtio_vsock.h  kernel_vmm_inputs.c  kernel_vmm_inputs.h  kernel_xsave.c  (+16 more)
pal/src/host/vm/bios/: bios.S  bios.lds
subprojects/packagefiles/glibc-2.38/: compile-no-patches.sh  meson.build  meson_options.txt
tools/: gramine-tdx.in  gramine-vm.in  meson.build
